TM-51  Change task dependencies to ensure ziptask is triggered.